# egex

./: .gitignore  Ego-Exo-Test-Checklist.md  Ego-Exo.md  LICENSE  README.md  README_EN.md  THIRD_PARTY_NOTICES.md  requirements.txt  setup.sh  修方方案.md  双机修改方案.md  总结.md
LeRobot-Anything-U-Arm-feat-ros2/: .gitignore  README.md  README_CN.md  howtoplay.md  overall_requirements.txt  requirements.txt  ros1_requirements.txt  ros2_requirements.txt
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/: CMakeLists.txt  package.xml  setup.py
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/scripts/: add_permission.sh  cam_pub.py  episode_recorder.py  run_all_nodes.sh
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/scripts/Follower_Arm/ARX/: arx_teleop.py
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/scripts/Follower_Arm/Dobot/: servo2Dobot.py
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/scripts/Follower_Arm/xarm/: servo2xarm.py  xarm_pub.py
LeRobot-Anything-U-Arm-feat-ros2/src/uarm/scripts/Uarm_teleop/: README.md  servo_changeid.py  servo_reader.py  servo_reader_fixed.py  servo_zero.py
configs/: act_realman.yaml  calibration_realman.yaml  diffusion_realman.yaml  egexo_runtime.yaml  egexo_smolvla_realman.yaml  pi0_realman.yaml  smolvla_realman.yaml  uarm_realman_map.yaml  vqbet_realman.yaml
docs/: pipeline_guide.md  technical_details.md  troubleshooting.md
examples/: README.md
hardware/: README.md  realman_teleop_controller.py  uarm_realman_mapper.py  uarm_ros2_subscriber.py  vive_tracker.py
scripts/: T_base_camera.txt  T_base_camera.yaml  camera_intrinsics.yaml  check_egexo_hdf5.py  train.sh  (+10 more)
(+30 files in other folders)
