<?xml version="1.0"?>
<package format="3">
  <name>uarm</name>
  <version>0.0.0</version>
  <description>The UArm package for ROS2</description>

  <maintainer email="zyw@todo.todo">zyw</maintainer>
  <license>Apache-2.0</license>

  <!-- ROS2 build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- ROS2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
